# python-intercom

./: .coveragerc  .gitignore  .release-please-manifest.json  .stats.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGES  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  INSTALL  INSTALL.md  INSTALL.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  README  README.md  README.rst  api.md  dev-requirements.txt  mypy.ini  pylint.conf  pyproject.toml  reference.md  release-please-config.json  requirements.txt  rtd-requirements.txt  setup.py
.fern/: metadata.json
.github/: dependabot.yml
.github/workflows/: ci.yml  create-releases.yml  handle-release-pr-title-edit.yml  publish-pypi.yml  release-doctor.yml
docs/: Makefile  changelog.rst  conf.py  development.rst  faq.rst  index.rst  installation.rst  make.bat
docs/api/: intercom.api_operations.rst  intercom.extended_api_operations.rst  intercom.generic_handlers.rst  (+4 more)
intercom/: __init__.py  admin.py  client.py  collection_proxy.py  company.py  contact.py  conversation.py  count.py  errors.py  event.py  events.py  impression.py  intercom.py  intercom.py.bak  job.py  lead.py  message.py  message_thread.py  note.py  notification.py  request.py  scroll_collection_proxy.py  segment.py  subscription.py  tag.py  test.py  user.py  utils.py
scripts/: lint
tests/: __init__.py  conftest.py  run_tests.sh  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_impression.py  test_intercom.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  test_user.py  utils.py
(+2085 files in other folders)
