[tool.poetry]
name = "python-intercom"
version = "4.0.0"
description = "Intercom API wrapper"
authors = ["Dimosthenis Schizas <dimos@hackthebox.eu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8.12"
certifi = "^2022.9.24"
inflection = "^0.5.1"
pytz = "^2022.2.1"
requests = "^2.28.1"
urllib3 = "^1.26.12"
six = "^1.16.0"
Deprecated = "^1.2.13"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mock = "^4.0.3"
coveralls = "^3.3.1"
coverage = "^6.5.0"
Sphinx = "^5.2.2"
sphinx-rtd-theme = "^1.0.0"
ipdb = {version = "^0.13.9", optional = true}
ipython = {version = "^8.5.0", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
